# OpenPHIGS

./: .gitignore  CMakeLists.txt  Makefile  OpenPHIGS.exvim  README.md  makeinclude  op.exvim
src/: CMakeLists.txt  Makefile  creaCapitoli  tags
src/archive/: Makefile
src/c_binding/: Makefile  cb_ctrl.c  cb_wst.c
src/cp/: Makefile  cp_ccom.c  cp_priv.h  cp_rcom.c  cpa_css.c  cpx_ar.c
src/css/: Makefile
src/doc/: CMakeLists.txt  Makefile  Makefile_sav  README  link_phigs_man.sh  man2html  names.make  phigs.names  phigs_man_to_html.sh
src/doc/htmlsrc/: FindForm.html  MainMenu.js  OpenPHIGS.html  OpenPHIGS.js  logo.html  menu.html  p232.html  p408.html  p409.html  p410.html  pfuncs.html  pnames.html  vuoto.html
src/doc/manpages/: p001  p002  p003  p004  p005  p006  p007  p008  p009  p010  p011  p012  p013  p014  p015  p016  p017  p018  p019  p020  p021  p022  p023  p024  p025  p026  p027  p028  p029  p030  p031  p032  p033  p034  p035  p036  p037  p038  p039  p040  (+304 more)
src/error/: Makefile  error.c
src/include/: Makefile  PHIGSerr.txt  attr.h  errnum.h  phigs.h
src/include/phigs/: CMakeLists.txt  Makefile  attr.h  err.h  phigs_config.h
src/input/: Makefile
src/pex/: Makefile
src/phigsmon/: Makefile  phigsmon.c
src/swap/: Makefile  swap_ConvName.ci  swap_Convert.c  swap_OCTables.c  swap_OCattr.c  swap_OCcolour.c  swap_OCcolour.ci  swap_UconvName.ci  swap_cOCTables.ci  swap_cOCprim.c  swap_convertStr.h  swap_floatconv.c  swap_floatconv.h  swap_uOCTables.ci  swap_uOCprim.c
src/util/: Makefile  ut_htab.c  ut_wchar.c
src/ws/: Makefile
src/ws_type/: Makefile  wstx_alst.c  wstx_ini.c
tests/: CMakeLists.txt  Makefile
tests/src/: Copyright  README
tests/src/archive/: CMakeLists.txt  Makefile  shapes.c  shapes.phar  simple.c  simple.phar
tests/src/areas/: CMakeLists.txt  Makefile  fas.c  fasd.c  fillarea.c  quad.c  sofas.c  surface.c  surface_trimmed.c  tristrip.c
tests/src/bundles/: CMakeLists.txt  Makefile  bundles.c
tests/src/concepts/: CMakeLists.txt  Makefile  billions.c  billions_color.c  billions_ind.c  buttons.c  first.c  houses.c  sedit.c
tests/src/css/: CMakeLists.txt  Makefile  css_probe.c  paths.c
tests/src/error/: CMakeLists.txt  Makefile  error.c
tests/src/input/: CMakeLists.txt  Makefile  move.c  movex.c  pick.c  pickx.c  western_europe.h
tests/src/inquiry/: CMakeLists.txt  Makefile  complex_inq.c
tests/src/lines/: CMakeLists.txt  Makefile  circle.c  curves.c  plineset.c  polyline.c
tests/src/marker/: CMakeLists.txt  Makefile  marker.c
tests/src/modeling/: CMakeLists.txt  Makefile  mclip.c  orbit.c  sulfate.c  sulfate2.c
tests/src/namesets/: CMakeLists.txt  Makefile  map.c  western_europe.h
tests/src/rendering/: CMakeLists.txt  Makefile  dcue.c  light_tool.c  sphere.c  sphere2.c  sphere3.c  sphere4.c
tests/src/text/: CMakeLists.txt  Makefile  extent.c  text.c
tests/src/viewing/: CMakeLists.txt  Makefile  pvt.c  pvt2.c  pvt3.c  ride.c  twod_view.c  view_ori.c
tests/src/ws/: CMakeLists.txt  Makefile  ws_is_open.c
tests/src/xadvanced/: CMakeLists.txt  Makefile  Motif2.c  ux_visual.c  ux_xlib2.c
tests/src/xbasic/: CMakeLists.txt  Makefile  Motif.c  Motif_rr.c  OLIT.c  OLIT_rr.c  XView.c  XView_rr.c  openxws.c  ux_xlib.c  ux_xlib_rr.c
