ADD_EXECUTABLE(circle circle.c)
TARGET_LINK_LIBRARIES(circle ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(curves curves.c)
TARGET_LINK_LIBRARIES(curves ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(plineset plineset.c)
TARGET_LINK_LIBRARIES(plineset ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(polyline polyline.c)
TARGET_LINK_LIBRARIES(polyline ${PHIGS_LIBRARIES})
