ADD_EXECUTABLE(mclip mclip.c ../xbasic/openxws.c)
TARGET_LINK_LIBRARIES(mclip ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(orbit orbit.c)
TARGET_LINK_LIBRARIES(orbit ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(sulfate sulfate.c)
TARGET_LINK_LIBRARIES(sulfate ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(sulfate2 sulfate2.c)
TARGET_LINK_LIBRARIES(sulfate2 ${PHIGS_LIBRARIES})


