ADD_EXECUTABLE(sphere sphere.c)
TARGET_LINK_LIBRARIES(sphere ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(sphere2 sphere2.c)
TARGET_LINK_LIBRARIES(sphere2 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(sphere3 sphere3.c)
TARGET_LINK_LIBRARIES(sphere3 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(sphere4 sphere4.c)
TARGET_LINK_LIBRARIES(sphere4 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(dcue dcue.c)
TARGET_LINK_LIBRARIES(dcue ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(light_tool light_tool.c)
TARGET_LINK_LIBRARIES(light_tool ${PHIGS_LIBRARIES} ${MOTIF_LIBRARIES})

